--- a/week_01/05-flow_control_2.ipynb
+++ b/week_01/05-flow_control_2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "hungry-creativity",
    "metadata": {
     "toc": true
    },
@@ -13,7 +12,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chemical-canadian",
    "metadata": {},
    "source": [
     "# Let's keep the flow going"
@@ -21,7 +19,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "departmental-stress",
    "metadata": {},
    "source": [
     "![FLOW](https://media.giphy.com/media/h8y265b9iKtzKT0pDj/giphy.gif)"
@@ -29,7 +26,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contrary-editing",
    "metadata": {},
    "source": [
     "## The \"while\" statement\n",
@@ -42,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eleven-postage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +51,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "nutritional-order",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "random-blood",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +112,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collected-organic",
    "metadata": {},
    "source": [
     "[NoneType](https://www.educative.io/edpresso/what-is-the-none-keyword-in-python#:~:text=In%20Python%2C%20None%20keyword%20is,not%20create%20other%20NoneType%20objects.)"
@@ -128,7 +120,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-police",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +129,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "active-entrance",
    "metadata": {},
    "source": [
     "En el caso de while True la expresión siempre va a ser evaluada como verdadera por definición. \n",
@@ -153,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "certain-classroom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +157,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "supported-rocket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +170,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "measured-signal",
    "metadata": {},
    "source": [
     "#### Your turn\n",
@@ -192,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "competitive-edward",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +194,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "approximate-weapon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +208,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civic-environment",
    "metadata": {},
    "source": [
     "Read positive integers from the keyboard, until the user enters 0. Report the largest number entered."
@@ -232,7 +216,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "written-cemetery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +230,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eastern-ambassador",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +245,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "three-dividend",
    "metadata": {},
    "source": [
     "## Pass\n",
@@ -276,7 +257,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "hairy-consumer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +270,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "polish-priority",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +289,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concerned-hearts",
    "metadata": {},
    "source": [
     "## For"
@@ -318,7 +296,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-jesus",
    "metadata": {},
    "source": [
     "Es muy habitual escribir un código con bucles dentro de estas dos posibles situaciones:    \n",
@@ -328,7 +305,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loving-style",
    "metadata": {},
    "source": [
     "La sentencia For, en Python, permite iterar sobre secuencias de valores (listas o cadenas) según un orden establecido. A diferencia de otros lenguajes, con el for de Python no se definen contadores o expresiones que cambien a cada iteración sino una secuencia sobre la cual la variable contador tomará sus valores. En cualquier caso, es la opción más adecuada para resolver los dos casos anteriores....vamos a poner un ejemplo:"
@@ -337,7 +313,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "subjective-liechtenstein",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +332,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "needed-billy",
    "metadata": {},
    "source": [
     "La sentencia for, en Python, itera sobre colecciones. Por tanto, si necesitamos un contador que se incremente en cada iteración, Python proporciona la función range(), que genera listas de enteros. Esta función permite generar secuencias y es bastante versátil y podemos invocarla de diferentes maneras:"
@@ -365,7 +339,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impaired-athletics",
    "metadata": {},
    "source": [
     "- Con un solo argumento: genera enteros que van desde 0 hasta el anterior indicado como parámetro:"
@@ -374,7 +347,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "threaded-houston",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +364,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "caroline-christopher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +373,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "renewable-zealand",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +389,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adaptive-journalism",
    "metadata": {},
    "source": [
     "- Con dos argumentos. El primer parámetro es el valor inicial y el segundo el valor por debajo del cual deben estar los elementos de la lista:"
@@ -428,7 +397,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "noted-louisiana",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +413,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polish-functionality",
    "metadata": {},
    "source": [
     "- Con tres argumentos. Igual que en el anterior, pero el tercer parámetro indica el incremento que se produce de un elemento al siguiente:"
@@ -454,7 +421,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cheap-sherman",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +438,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "christian-dealer",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +465,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "illegal-guard",
    "metadata": {},
    "source": [
     "#### Your turn\n",
@@ -509,7 +473,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moral-atlantic",
    "metadata": {},
    "source": [
     "### Iterate over strings"
@@ -518,7 +481,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "subjective-arizona",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +504,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hourly-lewis",
    "metadata": {},
    "source": [
     "### Iterate over a list"
@@ -551,7 +512,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "little-vegetable",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +532,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-result",
    "metadata": {},
    "source": [
     "### Iterate over lists with their index"
@@ -581,7 +540,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "unsigned-parallel",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +561,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limiting-external",
    "metadata": {},
    "source": [
     "### Iterate over two lists at the same time"
@@ -611,8 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "yellow-mouth",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +580,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "familiar-roulette",
    "metadata": {},
    "outputs": [
     {
@@ -645,8 +600,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Fer', '🔥', 1), ('Ana', '🌴', 2), ('Sheriff', '👮', 3), ('Ras', '🚀', 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista12 = []\n",
+    "for nombre,emoji,num in zip(nombres,emojis,lista_3):\n",
+    "    lista12.append((nombre,emoji,num))\n",
+    "print(lista12)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
-   "id": "historical-westminster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +630,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "timely-template",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +650,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "mechanical-bronze",
    "metadata": {
     "scrolled": true
    },
@@ -701,7 +673,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "brutal-polymer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +682,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "municipal-steel",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +702,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virtual-exchange",
    "metadata": {},
    "source": [
     "### Iterate over the items in a dictionary"
@@ -741,7 +710,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "exposed-character",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +722,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "excellent-duncan",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +742,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "historic-economics",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +762,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dried-domestic",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +782,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "equivalent-outline",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +802,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "minor-scotland",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +822,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "promotional-radio",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +841,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "level-cardiff",
    "metadata": {},
    "source": [
     "## Break"
@@ -887,7 +848,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opponent-legislature",
    "metadata": {},
    "source": [
     "We can literally `break` a recursion when a condition is satisfied"
@@ -896,7 +856,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "african-authority",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +865,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "prescribed-boxing",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +887,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "published-independence",
    "metadata": {},
    "source": [
     "## Let`s go"
@@ -937,23 +894,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inclusive-headset",
    "metadata": {},
    "source": [
     "Escribir un programa que pregunte al usuario su edad y muestre por pantalla todos los años que ha cumplido (desde 1 hasta su edad)."
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edad = 0\n",
+    "años_cumplidos = 0\n",
+    "while edad <= 0:\n",
+    "    edad = int(input(\"Que edad tienes?\"))\n",
+    "    if edad > 0:\n",
+    "        años_cumplidos += (edad)\n",
+    "print(f\"Has cumplido {list(range(0,años_cumplidos))}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "accomplished-messaging",
    "metadata": {},
    "source": [
     "Escribir un programa que pida al usuario un número entero positivo y muestre por pantalla todos los números impares desde 1 hasta ese número separados por comas."
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "introduzca un número entero positivo 7\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-37f70e7b32e6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mnumero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"introduzca un número entero positivo\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mnumero\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mimpares\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnumero\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimpares\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "sufficient-pontiac",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -967,6 +962,13 @@
     "- for se utiliza cuando tenemos un principio y un fin (un iterable, por ejemplo lista...)\n",
     "- break para cuando se da una condición"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
