--- a/week_01/Untitled3.ipynb
+++ b/week_01/Untitled3.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_triangle(a, b, c):\n",
+    "    if a+b > c and a+c >b and c+b >a:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "is_triangle(0,)"
+   ]
   }
  ],
  "metadata": {
