--- a/week_01/07-functions.ipynb
+++ b/week_01/07-functions.ipynb
@@ -477,44 +477,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-120-a7445e76758b>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-120-a7445e76758b>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    def count_lower_case_letter(word)\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "word = \"pePiTo\"\n",
-    "\n",
-    "def count_lower_case_letter(word)\n",
-    "    n_minus = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<generator object count_lower_case_letters.<locals>.<genexpr> at 0x000001C73861FAC0>"
+       "4"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word = \"pePiTo\"\n",
+    "\n",
+    "def count_lower_case_letter(word):\n",
+    "    n_minus = 0\n",
+    "    for w in word:\n",
+    "        if w.islower():\n",
+    "            n_minus += 1\n",
+    "    return n_minus\n",
+    "\n",
+    "count_lower_case_letter(\"pePiTo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def count_lower_case_letters(word):\n",
-    "    return (1 for w in word if word.islower())\n",
+    "    return len([w for w in word if w.islower()])\n",
     "\n",
     "count_lower_case_letters(\"pePiTo\")"
    ]
@@ -558,23 +566,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'la palabra mas larga es pepe'"
+       "'la palabra mas larga es juan'"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def get_longest_word(word1, word2):\n",
-    "    return f\"la palabra mas larga es {word1 if len(word1) > len(word2) else word2 if len(word1) == len(word2) else word2}\"\n",
+    "    return f\"la palabra mas larga es {word1 if len(word1) > len(word2) else word1 if len(word1) == len(word2) else word2}\"\n",
     "#REVISAR ESTO!!!!!!!\n",
     "get_longest_word(\"juan\", \"pepe\")"
    ]
@@ -699,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,16 +943,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 'pepe')\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "explore_args(1, 2, 3, \"pepe\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,9 +979,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5040"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "multiply_numbers(2, 3, 4, 5, 6, 7)"
    ]
