--- a/week_01/09-repaso_juego_¡¡esviernes!!.ipynb
+++ b/week_01/09-repaso_juego_¡¡esviernes!!.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "tribal-musician",
    "metadata": {},
    "source": [
     "## Timer"
@@ -10,10 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "architectural-balloon",
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pygame'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-977876b28409>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpygame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mpygame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmixer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pygame'"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import pygame\n",
@@ -22,8 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "dated-version",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "adopted-collective",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "hazardous-stomach",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,18 +63,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "generous-semiconductor",
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pygame' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-d9d81372cd64>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcontador\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkatas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-22-7f02c1001b72>\u001b[0m in \u001b[0;36mcontador\u001b[1;34m(tipo)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtipo\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mfinal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmixer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSound\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'bocina.mp3'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mfinal\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pygame' is not defined"
+     ]
+    }
+   ],
    "source": [
     "contador(katas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "placed-caution",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,8 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "pregnant-harvest",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,17 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "comparative-perspective",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Code Warriors'"
+       "'Guerreras Data'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,10 +125,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "distributed-sword",
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pygame' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-44dd313bbb57>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcontador\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-11-7f02c1001b72>\u001b[0m in \u001b[0;36mcontador\u001b[1;34m(tipo)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtipo\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mfinal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmixer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSound\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'bocina.mp3'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mfinal\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pygame' is not defined"
+     ]
+    }
+   ],
    "source": [
     "contador(1)"
    ]
@@ -120,7 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "neural-joyce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "abandoned-piano",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +182,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "substantial-reynolds",
    "metadata": {},
    "source": [
     "## Rondas de preguntas"
@@ -165,7 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "demographic-friendly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stock-jimmy",
    "metadata": {},
    "source": [
     "¿Es correcta esta sintaxis?\n",
@@ -190,7 +213,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "scenic-deployment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +222,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "focal-warrant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "passive-jenny",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +250,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subtle-palestinian",
    "metadata": {},
    "source": [
     "## Katas"
@@ -238,7 +257,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inclusive-international",
    "metadata": {},
    "source": [
     "[Kata 7 kyu Code Warriors VS Controladores de Python](https://www.codewars.com/kata/553e8b195b853c6db4000048)"
@@ -247,7 +265,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "special-disability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +274,6 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "toxic-license",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +293,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-august",
    "metadata": {},
    "source": [
     "[Kata 7 KYU Héroes de Python VS IronMaidens](https://www.codewars.com/kata/56606694ec01347ce800001b/train/python)"
@@ -286,7 +301,6 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "driven-screen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +310,6 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "every-infection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +321,6 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "naked-centre",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +336,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civilian-digit",
    "metadata": {},
    "source": [
     "## Dudas de clase 26 de marzo"
@@ -333,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "clean-industry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fitting-repository",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +363,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "pediatric-tragedy",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +383,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "south-field",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +394,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interracial-semiconductor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +403,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "laden-filter",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +425,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "duplicate-bronze",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +449,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "confidential-hearts",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +461,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "individual-stake",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +481,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "equivalent-party",
    "metadata": {},
    "outputs": [
     {
