--- a/week_01/05-flow_control_2.ipynb
+++ b/week_01/05-flow_control_2.ipynb
@@ -178,9 +178,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Introduce un número (0 para parar ):  5\n",
+      "Introduce un número (0 para parar ):  5\n",
+      "Introduce un número (0 para parar ):  5\n",
+      "Introduce un número (0 para parar ):  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma es 15 \n"
+     ]
+    }
+   ],
    "source": [
     "num = None\n",
     "suma_num = 0\n",
@@ -193,9 +211,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Número (0 para terminar):  5\n",
+      "Número (0 para terminar):  5\n",
+      "Número (0 para terminar):  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Suma total de nums es: 10\n"
+     ]
+    }
+   ],
    "source": [
     "nums = 0\n",
     "n = int(input(\"Número (0 para terminar): \"))\n",
@@ -215,9 +250,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Número positivo: 5\n",
+      "Número positivo: 5\n",
+      "Número positivo: 4\n",
+      "Número positivo: 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mayor número ingresado: 5\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = []\n",
     "n=int(input(\"Número positivo:\"))\n",
