--- a/week_02/05-jupyter-tricks.ipynb
+++ b/week_02/05-jupyter-tricks.ipynb
@@ -492,7 +492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/sheriff/ironhack/2021_january/teaching/week_03\r\n"
+      "/home/sheriff/ironhack/2021_january/teaching/week_03\n"
      ]
     }
    ],
@@ -509,10 +509,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01-apis.ipynb\t  04-scraping.ipynb  index_html.html\r\n",
-      "02-queries.sql\t  data\t\t     lab-api-scavenger-game-master\r\n",
-      "02-sql.md\t  html_intro.pdf     my_news_key.txt\r\n",
-      "03-jupyter.ipynb  images\t     QA\r\n"
+      "01-apis.ipynb\t  04-scraping.ipynb  index_html.html\n",
+      "02-queries.sql\t  data\t\t     lab-api-scavenger-game-master\n",
+      "02-sql.md\t  html_intro.pdf     my_news_key.txt\n",
+      "03-jupyter.ipynb  images\t     QA\n"
      ]
     }
    ],
@@ -529,8 +529,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jupyterlab-pygments               0.1.2\r\n",
-      "seaborn                           0.11.0\r\n"
+      "jupyterlab-pygments               0.1.2\n",
+      "seaborn                           0.11.0\n"
      ]
     }
    ],
